Removed a couple of while loops in an attempt to tackle the hanging bug; changed a bit in the learning mechanism.