@@ -1,18 +1,20 @@
-/** 
- Project "com.quui.chat.core" (C) 2004 Fabian Steeg
-
- This library is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation; either version 2.1 of the License, or (at your option) any later version.
-
- This library is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
-
- You should have received a copy of the GNU Lesser General Public License along with this library; if not, write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+/**
+ * Project "com.quui.chat.core" (C) 2004 Fabian Steeg This library is free
+ * software; you can redistribute it and/or modify it under the terms of the GNU
+ * Lesser General Public License as published by the Free Software Foundation;
+ * either version 2.1 of the License, or (at your option) any later version.
+ * This library is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
+ * details. You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  */
 
 package com.quui.chat.mind;
 
 import java.io.Serializable;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.Map;
 import java.util.Random;
 import java.util.Vector;
@@ -20,11 +22,10 @@ import java.util.Vector;
 import com.quui.chat.Log;
 
 /**
- * A topic consists of keys and answers
- * 
+ * A topic consists of keys and answers.
  * @author Fabian Steeg (fsteeg)
  */
-public class Topic implements Serializable, Comparable {
+public class Topic implements Serializable, Comparable<Topic> {
     private static final long serialVersionUID = 1L;
 
     private Map<String, Integer> answers;
@@ -33,9 +34,11 @@ public class Topic implements Serializable, Comparable {
 
     private Vector<String> keys;
 
+    private Random randomGen = new Random();
+
     /**
      * Flag to indicate if a word was selected by synonym, meaning it is close
-     * to a user input
+     * to a user input.
      */
     private boolean wasPickedBySynonym = false;
 
@@ -56,8 +59,7 @@ public class Topic implements Serializable, Comparable {
     }
 
     /**
-     * @param name
-     *            The name to set
+     * @param name The name to set
      */
     public void setName(String name) {
         this.name = name;
@@ -71,13 +73,9 @@ public class Topic implements Serializable, Comparable {
 
     /**
      * For XML Serialization
-     * 
-     * @param name
-     *            The name of the topic
-     * @param keys
-     *            The keys
-     * @param answers
-     *            The mapping of answers to frequencies
+     * @param name The name of the topic
+     * @param keys The keys
+     * @param answers The mapping of answers to frequencies
      */
     public Topic(String name, Vector<String> keys, Map<String, Integer> answers) {
         this.name = name;
@@ -93,18 +91,16 @@ public class Topic implements Serializable, Comparable {
     }
 
     /**
-     * @param newKey
-     *            The new key to add to this topic. complex keys are not added
-     *            or only partially added
+     * @param newKey The new key to add to this topic. complex keys are not
+     *            added or only partially added
      */
     public void addKey(String newKey) {
         if (newKey.endsWith(")")) {
             newKey = newKey.substring(0, newKey.indexOf("("));
         }
-        if (keys.contains(newKey) || newKey.indexOf("-") != -1
-                || newKey.indexOf("_") != -1)
+        if (keys.contains(newKey)) {
             return;
-
+        }
         String key = newKey.toLowerCase();
         Log.logger.debug("Adding key: '" + key + "' to topic: '" + name + "'");
         keys.add(key);
@@ -113,20 +109,17 @@ public class Topic implements Serializable, Comparable {
     /**
      * Adds a string as an answer, removing "_", counting how often that answer
      * was told
-     * 
-     * @param answer
-     *            The answer to add
+     * @param answer The answer to add
      */
     public void addAnswer(String answer) {
         answer = answer.replaceAll("_", " ");
         Log.logger.debug("Adding answer: '" + answer + "' to topic: '" + name
                 + "'");
         if (!answers.containsKey(answer)) {
-            answers.put(answer, new Integer(1));
+            answers.put(answer, Integer.valueOf(1));
         } else {
             // count up the frequency for the answer
-            answers.put(answer, new Integer(((Integer) answers.get(answer))
-                    .intValue() + 1));
+            answers.put(answer, answers.get(answer).intValue() + 1);
         }
 
     }
@@ -137,16 +130,13 @@ public class Topic implements Serializable, Comparable {
     public String getAnswer() {
         Log.logger.debug("[will get random answer for the topic: '" + name
                 + "]");
-
-        Random randomGen = new Random();
         /*
          * generate a vector with dublicate answers for answers with frequencies
          * higher than 1:
          */
         Vector<String> v = new Vector<String>();
-        for (Iterator iter = answers.keySet().iterator(); iter.hasNext();) {
-            String answer = (String) iter.next();
-            int answerFreq = ((Integer) answers.get(answer)).intValue();
+        for (String answer : answers.keySet()) {
+            int answerFreq = answers.get(answer).intValue();
             for (int i = 0; i < answerFreq; i++) {
                 v.add(answer);
             }
@@ -155,21 +145,39 @@ public class Topic implements Serializable, Comparable {
         if (numberOfAnswers > 0) {
             int randomPos = randomGen.nextInt(numberOfAnswers);
             randomPos = randomGen.nextInt(numberOfAnswers);
-            return (String) v.elementAt(randomPos);
-        } else
-            return null;
+            return v.elementAt(randomPos);
+        }
+        return null;
     }
 
     /**
+     * {@inheritDoc}
      * @see java.lang.Comparable#compareTo(java.lang.Object)
      */
-    public int compareTo(Object o) {
-        return this.name.compareTo(((Topic) o).getName());
+    public int compareTo(Topic o) {
+        return this.name.compareTo(o.getName());
     }
 
     /**
-     * @param keyToTest
-     *            The key to test
+     * {@inheritDoc}
+     * @see java.lang.Object#hashCode()
+     */
+    @Override
+    public int hashCode() {
+        return this.name.hashCode();
+    }
+
+    /**
+     * {@inheritDoc}
+     * @see java.lang.Object#equals(java.lang.Object)
+     */
+    @Override
+    public boolean equals(Object obj) {
+        return obj instanceof Topic && ((Topic) obj).compareTo(this) == 0;
+    }
+
+    /**
+     * @param keyToTest The key to test
      * @return Returns true if this topic contains the key
      */
     public boolean containsKey(String keyToTest) {
@@ -177,8 +185,7 @@ public class Topic implements Serializable, Comparable {
     }
 
     /**
-     * @param answerToTest
-     *            The answer to test
+     * @param answerToTest The answer to test
      * @return True is this Topic contains the answer
      */
     public boolean containsAnswer(String answerToTest) {
@@ -186,8 +193,7 @@ public class Topic implements Serializable, Comparable {
     }
 
     /**
-     * @param maxScore
-     *            The score to set
+     * @param maxScore The score to set
      */
     public void setScore(double maxScore) {
         this.score = maxScore;
